--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app">
-    <button id="button">click me</button>
-    </div>
+    <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
